[EATON-516] FIX - Landing Hero - Article Page - Incorrect spacing between Headline, Horizontal Rule, and Description.

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -29,7 +29,7 @@
 
 .eaton-landing-hero__title { margin: 0; }
 
-.eaton-landing-hero__separator { width: 5%; height: 2px; background: #FFF; margin: 20px auto; }
+.eaton-landing-hero__separator { width: 5%; height: 2px; background: #FFF; margin: 48px auto 52px; }
 
 .eaton-landing-hero__arrow { display: none !important; position: absolute; top: 45%; }
 
